<resources>
    <string name="app_name">Calculator</string>
    <string name="activity_1">The Calc</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
<!-- String for radio -->
    <string name="add">Add</string>
    <string name="sub">Subtract</string>
    <string name="mult">Multiply</string>
    <string name="divide">Divide</string>
    <string name="left">Left</string>
    <string name="equals" translatable="false">=</string>
    <string name="zero" translatable="false">0</string>
    <string name="clear" translatable="false">CLEAR</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="right">Right</string>

    <string name="left_operand">Left Operand</string>
    <string name="plus" translatable="false">+</string>
    <string name="right_operand">Right Operand</string>
    <string name="night_mode">Night Mode</string>
    <string name="result">Result</string>
    <string name="operand_error">You need a value in both operand</string>
    <string name="reset_toast">Everything has been reset</string>
    <string name="value_error">Unexpected value: </string>

</resources>